use wpaudio wordpress plugin

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,7 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+  <script type='text/javascript'>/* <![CDATA[ */ var _wpaudio = {url: '/js/wpaudio-mp3-player', enc: {}, convert_mp3_links: false, style: {text_font:'sans-serif',text_size:'1em',text_weight:'bold',text_letter_spacing:'normal',text_color:'inherit',link_color:'#1982D1',link_hover_color:'#02f',bar_base_bg:'#eee',bar_load_bg:'#ccc',bar_position_bg:'#1982D1',sub_color:'#aaa'}}; /* ]]> */</script>
+  <script src="/js/wpaudio-mp3-player/wpaudio.min.js"></script>
 </head>
