--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,17 +2,8 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
@@ -25,11 +16,34 @@
             {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
+
+          {% if site.instagram_username %}
+          <li>
+            {% include icon-instagram.html username=site.instagram_username %}
+          </li>
+          {% endif %}
+          
+          {% if site.soundcloud_username %}
+          <li>
+            {% include icon-soundcloud.html username=site.soundcloud_username %}
+          </li>
+          {% endif %}
         </ul>
       </div>
 
+      <div class="footer-col footer-col-2">
+        <!--
+        <ul class="contact-list">
+          <li>{{ site.title }}</li>
+          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+        </ul>
+        -->
+      </div>
+
       <div class="footer-col footer-col-3">
+        <!--
         <p>{{ site.description }}</p>
+        -->
       </div>
     </div>
 
