--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -198,6 +198,7 @@ pre {
         width: 16px;
         height: 16px;
         vertical-align: middle;
+        padding-right: 4px;
 
         path {
             fill: $grey-color;
